--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">Slimane Aguersif</a>
+          by <a href="https://github.com/Slimattcode/request_header_parser">Slimane Aguersif</a>
         </p>
       </div>
    </body>
